# file-date-fixer

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: codecheck.yml  release.yml
src/: cli.rs  file_metadata.rs  lib.rs  logger.rs  main.rs
src/file_metadata/: common.rs  linux.rs  mod.rs  windows.rs
src/file_processor/: date.rs  directory.rs  file.rs  mod.rs  normalization.rs
src/file_processor/tests/: date_tests.rs  mod.rs  normalization_test.rs
tests/: file_date_modification_test.rs
windows/: image_date_keeper.ps1
