[package]
name = "file_date_fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
filetime = "0.2.25"
filetime_creation = "0.2.0"
regex = "1.11.1"

[lib]
name = "file_date_fixer"
path = "src/lib.rs"

[[bin]]
name = "file_date_fixer"
path = "src/main.rs"